--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,11 @@
         </plugins>
 	<finalName>springbootApp</finalName>
     </build>
+	
+	<plugin>
+    	   <groupId>org.codehaus.mojo</groupId>
+           <artifactId>sonar-maven-plugin</artifactId>
+    	   <version>3.0.2</version>
+	</plugin>
  
 </project>
